# krishi_sarthi-

./: Dockerfile  README.md  config.py  env.example  ingest_documents.py  pyproject.toml  requirements.txt  test_results.json  test_system.py
app/: __init__.py  main.py
app/modules/: __init__.py  llm_cloud.py  llm_local.py  nlu.py  rag.py  response.py  rules.py  soil.py  stt.py  weather.py
data/faiss_index/: document_metadata.json
data/knowledge_base/: Bajra .txt  Barley.txt  Maize.txt  Sugarcane.txt  TEA.txt  Tobacco.txt  _Wheat .txt  groundnut.txt  rice.txt  soybean.txt
static/: index.html
